<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/franch"
    android:orientation="vertical"
    android:padding="5dp"
    android:weightSum="6"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:background="@color/colorBackground"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
    android:layout_height="100dp"
    android:layout_width="match_parent"
    android:weightSum="3"
        android:padding="3dp"
    android:orientation="horizontal">
        <Button
            android:background="@color/background_bttn"
            android:id="@+id/franchlit_download"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="3dp"
            android:text="@string/franchise_btn1"/>
        <Button
            android:background="@color/background_bttn"
            android:id="@+id/broucher_download"
            android:layout_margin="3dp"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/franchise_btn2"/>
        <Button
            android:background="@color/background_bttn"
            android:id="@+id/menu_download"
            android:layout_margin="3dp"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/franchise_btn3"/>
    </LinearLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Heading_Franchise1"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/heading"
        android:gravity="center"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/stepowningtxt1"/>
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TableRow
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                android:text="• "></TextView>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:text="@string/stepown1">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                android:text="• "></TextView>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:text="@string/stepown2">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                android:text="• "></TextView>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:text="@string/stepown3">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                android:text="• "></TextView>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:text="@string/stepown4">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                android:text="• "></TextView>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:text="@string/stepown5">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                android:text="• "></TextView>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:text="@string/stepown6">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                android:text="• "></TextView>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:text="@string/stepown7">
            </TextView>
        </TableRow>
        <TableRow
            android:layout_margin="5dp"
            >
            <TextView
                android:layout_column="1"
                android:textStyle="bold"
                android:textSize="@dimen/heading"
                android:text="• "></TextView>
            <TextView
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:text="@string/stepown8">
            </TextView>
        </TableRow>

    </TableLayout>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Heading_Franchise2"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/heading"
        android:gravity="center"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/franchise_support"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Heading_Franchise3"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/heading"
        android:gravity="center"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/egg_francise_program"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/efp_heading1"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/site_selection"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/efp_heading2"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/ProjectMangement"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/efp_heading3"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/finance"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/efp_heading4"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/equipment"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/efp_heading5"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/vendormanagement"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/efp_heading6"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/completeTraining"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/efp_heading7"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Operation_manual"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Heading_Franchise4"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="@dimen/heading"
        android:gravity="center"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eggStopModels"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eggstopmodel_heading1"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/esmhead1_text"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eggstopmodel_heading2"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/esmhead2_text"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eggstopmodel_heading3"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/esmhead3_text"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/eggstopmodel_heading4"
        android:textStyle="bold"
        android:textSize="@dimen/subheading"
        android:gravity="left"
        />
    <TextView
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/esmhead4_text"/>

</LinearLayout>
    </ScrollView>

    </LinearLayout>
    <LinearLayout
        android:layout_weight="1.5"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:id="@+id/social"
        android:orientation="horizontal"
        >
        <ImageButton
            android:src="@drawable/fb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ffb"/>
        <ImageButton
            android:src="@drawable/yt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/yt"/>
        <ImageButton
            android:src="@drawable/gp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/gp"/>
    </LinearLayout>


</LinearLayout>