<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context="com.example.aditya.theeggstop.AboutUs">
    <LinearLayout
        android:background="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/AboutUs_tittle1"
            android:textStyle="bold"
            android:textSize="@dimen/subheading"
            android:gravity="left"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/abt_txt1"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/AboutUs_tittle2"
            android:textStyle="bold"
            android:textSize="@dimen/subheading"
            android:gravity="left"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/abt_txt2"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/AboutUs_tittle3"
            android:textStyle="bold"
            android:textSize="@dimen/subheading"
            android:gravity="left"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/abt_txt3"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/AboutUs_tittle4"
            android:textStyle="bold"
            android:textSize="@dimen/subheading"
            android:gravity="left"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/abt_txt4"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/AboutUs_tittle5"
            android:textStyle="bold"
            android:textSize="@dimen/subheading"
            android:gravity="left"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/abt_txt5"/>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/AboutUs_tittle6"
            android:textStyle="bold"
            android:textSize="@dimen/subheading"
            android:gravity="left"
            />
        <TextView
            android:layout_margin="5dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:text="@string/abt_txt6"/>

    </LinearLayout>
    </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="3">
        <ImageButton
            android:src="@drawable/fb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/ffb"/>
        <ImageButton
            android:src="@drawable/yt"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/yt"/>
        <ImageButton
            android:src="@drawable/gp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/gp"/>
    </LinearLayout>

</LinearLayout>
